force-app/main/default/objects/Rate_Revision_History__c/Rate_Revision_History__c.object-meta.xml
<CustomObject>
    <label>Rate Revision History</label>
    <nameField>
        <displayFormat>URR-{00000}</displayFormat>
        <label>Rate Revision History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Revision Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>