force-app/main/default/objects/Rate_Revision_History__c/fields/Changed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Changed_Fields__c</fullName>
    <label>Changed Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>