force-app/main/default/objects/Rate_Revision_History__c/fields/Changed_Values__c.field-meta.xml
<CustomField>
    <fullName>Changed_Values__c</fullName>
    <label>Changed Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>